--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,8 @@
   </ul>
 </div>
 
-<div class="left-sidebar bg-[#2E2E48] absolute left-0 top-0 w-[100px] sm:w-[ 100px] h-full shadow-[rgba(0,_0,_0,_0.35)_0px_5px_15px]">
+<div class="left-sidebar bg-[#2E2E48] fixed left-0 top-0 w-[100px] sm:w-[100px] h-full shadow-[rgba(0,_0,_0,_0.35)_0px_5px_15px]">
 </div>
 
-<div class="right-sidebar bg-[#2E2E48] absolute right-0 top-0 w-[100px] sm:w-[100px] h-full shadow-[rgba(0,_0,_0,_0.35)_0px_5px_15px]">
+<div class="right-sidebar bg-[#2E2E48] fixed right-0 top-0 w-[100px] sm:w-[100px] h-full shadow-[rgba(0,_0,_0,_0.35)_0px_5px_15px]">
 </div>
-
-
