--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,55 +1,24 @@
 <div class="main-course flex flex-col lg:flex-row justify-center items-center bg-white p-6 shadow-lg w-full max-w-screen-lg mx-auto space-y-6 lg:space-y-0 lg:space-x-6">
 
-  <div class="white-div bg-white shadow-lg p-4 rounded-lg w-full max-w-xs lg:w-80 flex flex-col items-center">
-    <h1 class="title text-xl font-semibold text-center py-4">Web Design</h1>
+  <div class="white-div bg-white shadow-lg p-4 rounded-lg w-full max-w-xs lg:w-80 flex flex-col items-center"
+       *ngFor="let i of course" [ngStyle]="{'background-color': i.backColor, 'color' : i.textColor  }" >
+    <h1 class="title text-xl font-semibold text-center py-4">{{i.title}}</h1>
     <h1 class="price text-3xl flex items-baseline justify-center">
-      <p class="text-xl">$</p><span>150</span><p class="text-xl">/mo</p>
+      <p class="text-xl">$</p><span>{{i.price}}</span><p class="text-xl">/mo</p>
     </h1>
     <div class="concepts mt-4 text-center">
       <ul class="list-disc pl-4 text-left">
-        <li class="text-sm py-2">Website Layout and Design</li>
-        <li class="text-sm py-2">User Interface (UI) Design</li>
-        <li class="text-sm py-2">Branding</li>
-        <li class="text-sm py-2">Wireframing and Prototyping</li>
-        <li class="text-sm py-2">UX/UI Design Principles</li>
+        <li class="text-sm py-2">{{i.sc1}}</li>
+        <li class="text-sm py-2">{{i.sc2}}</li>
+        <li class="text-sm py-2">{{i.sc3}}</li>
+        <li class="text-sm py-2">{{i.sc4}}</li>
+        <li class="text-sm py-2">{{i.sc5}}</li>
       </ul>
-      <button class="buy-btn bg-blue-900 text-white rounded-lg py-2 px-6 mt-6 w-full">Try Now</button>
+      <button class="buy-btn bg-blue-900 text-white rounded-lg py-2 px-6 mt-6 w-full" [ngStyle]="{'background-color': i.btnBackColor, 'color' : i.btnTextColor}" >Try Now</button>
     </div>
   </div>
 
-  <div class="black-div bg-blue-900 shadow-lg p-4 rounded-lg w-full max-w-xs lg:w-80 flex flex-col items-center text-white">
-    <h1 class="title text-xl font-semibold text-center py-4">Front-End Development</h1>
-    <h1 class="price text-3xl flex items-baseline justify-center">
-      <p class="text-xl">$</p><span>150</span><p class="text-xl">/mo</p>
-    </h1>
-    <div class="concepts mt-4 text-center">
-      <ul class="list-disc pl-4 text-left">
-        <li class="text-sm py-2">HTML (Hypertext Markup Language)</li>
-        <li class="text-sm py-2">CSS (Cascading Style Sheets)</li>
-        <li class="text-sm py-2">JavaScript (JS)</li>
-        <li class="text-sm py-2">Responsive Web Design</li>
-        <li class="text-sm py-2">Version Control (Git)</li>
-      </ul>
-      <button class="bg-white text-blue-900 rounded-lg py-2 px-6 mt-6 w-full">Try Now</button>
-    </div>
-  </div>
 
-  <div class="white-div bg-white shadow-lg p-4 rounded-lg w-full max-w-xs lg:w-80 flex flex-col items-center">
-    <h1 class="title text-xl font-semibold text-center py-4">Back-End Development</h1>
-    <h1 class="price text-3xl flex items-baseline justify-center">
-      <p class="text-xl">$</p><span>150</span><p class="text-xl">/mo</p>
-    </h1>
-    <div class="concepts mt-4 text-center">
-      <ul class="list-disc pl-4 text-left">
-        <li class="text-sm py-2">Server-Side Programming Languages</li>
-        <li class="text-sm py-2">Databases</li>
-        <li class="text-sm py-2">APIs</li>
-        <li class="text-sm py-2">Web Servers and HTTP(S)</li>
-        <li class="text-sm py-2">Server-Side Frameworks</li>
-      </ul>
-      <button class="buy-btn bg-blue-900 text-white rounded-lg py-2 px-6 mt-6 w-full">Try Now</button>
-    </div>
-  </div>
 
 </div>
 
