--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,1 +1,25 @@
-<p>services works!</p>
+<div class="main-course grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-center items-center bg-white p-6 shadow-lg w-full max-w-screen-lg mx-auto">
+
+  <div class="white-div bg-white shadow-lg p-4 rounded-lg w-full flex flex-col items-center"
+       *ngFor="let i of course" [ngStyle]="{'background-color': i.backColor, 'color' : i.textColor  }">
+    <h1 class="title text-xl font-semibold text-center py-4">{{i.title}}</h1>
+    <h1 class="price text-3xl flex items-baseline justify-center">
+      <p class="text-xl">$</p><span>{{i.price}}</span><p class="text-xl">/mo</p>
+    </h1>
+    <div class="concepts mt-4 text-center">
+      <ul class="list-disc pl-4 text-left">
+        <li class="text-sm py-2">{{i.sc1}}</li>
+        <li class="text-sm py-2">{{i.sc2}}</li>
+        <li class="text-sm py-2">{{i.sc3}}</li>
+        <li class="text-sm py-2">{{i.sc4}}</li>
+        <li class="text-sm py-2">{{i.sc5}}</li>
+      </ul>
+      <button class="buy-btn bg-blue-900 text-white rounded-lg py-2 px-6 mt-6 w-full" [ngStyle]="{'background-color': i.btnBackColor, 'color' : i.btnTextColor}">Try Now</button>
+    </div>
+  </div>
+
+</div>
+
+
+
+
