--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -39,9 +39,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -20%);
   font-family: "Hubot Sans", sans-serif;
-  margin-top: 200px;
 
 
 }
@@ -50,4 +49,15 @@
   .footer {
     display: none;
   }
+}
+
+@media only screen and (max-width: 640px) {
+ .main-course {
+
+   transform: translate(-50%, -5%);
+
+
+ }
+
+
 }
