--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,14 +1,25 @@
-<section class="content-container w-full max-w-4xl absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 p-5 box-border mt-8">
-  <h2 class="text-3xl font-bold mb-4">Welcome to Swiss</h2>
+<div class="main ">
 
-  <p class="text-lg leading-7 mb-4">where we empower individuals to unlock their full potential through expert-led development courses. Our mission is to provide high-quality, accessible education that helps students and professionals advance their careers in technology, business, design, and more. Whether you're looking to learn new skills, enhance existing ones, or embark on a career change, our comprehensive courses are designed to equip you with the knowledge and practical experience needed to succeed in today's fast-paced world. With flexible online learning options, expert instructors, and a supportive community, we are dedicated to helping you achieve your goals and thrive in your chosen field. Join us and take the next step towards your future!</p>
+  <section class="content-container w-full max-w-4xl  p-5 box-border mt-8">
+    <h2 class="text-3xl font-bold mb-4">Welcome to Swiss</h2>
 
-  <p class="text-lg leading-7">At Swiss, we believe that learning is a lifelong journey, and we're here to make that journey as rewarding and impactful as possible. Our team of industry professionals and expert educators have crafted a wide range of development courses tailored to meet the diverse needs of our learners. Whether you're a beginner exploring new fields or an experienced professional looking to sharpen your skills, we offer courses that cater to all levels and industries. We focus on practical, hands-on learning, ensuring that our students not only gain theoretical knowledge but also the real-world skills required to excel in their careers. Our platform is designed for flexibility, allowing you to learn at your own pace, from anywhere in the world. Additionally, our interactive content, engaging assignments, and ongoing support from mentors and peers create an enriching learning experience. What sets us apart is our commitment to staying ahead of industry trends. We continuously update our course offerings to align with the latest technologies and market demands. By joining Swiss, you're not just taking a course—you're investing in your future. Together, we’ll help you transform your ambitions into achievements, build your confidence, and prepare you for success in an ever-evolving world. Join our community today and start your journey toward mastering the skills that will shape your career and future!</p>
-</section>
+    <p class="text-lg leading-7 mb-4">where we empower individuals to unlock their full potential through expert-led development courses. Our mission is to provide high-quality, accessible education that helps students and professionals advance their careers in technology, business, design, and more. Whether you're looking to learn new skills, enhance existing ones, or embark on a career change, our comprehensive courses are designed to equip you with the knowledge and practical experience needed to succeed in today's fast-paced world. With flexible online learning options, expert instructors, and a supportive community, we are dedicated to helping you achieve your goals and thrive in your chosen field. Join us and take the next step towards your future!</p>
+
+    <p class="text-lg leading-7">At Swiss, we believe that learning is a lifelong journey, and we're here to make that journey as rewarding and impactful as possible. Our team of industry professionals and expert educators have crafted a wide range of development courses tailored to meet the diverse needs of our learners. Whether you're a beginner exploring new fields or an experienced professional looking to sharpen your skills, we offer courses that cater to all levels and industries. We focus on practical, hands-on learning, ensuring that our students not only gain theoretical knowledge but also the real-world skills required to excel in their careers. Our platform is designed for flexibility, allowing you to learn at your own pace, from anywhere in the world. Additionally, our interactive content, engaging assignments, and ongoing support from mentors and peers create an enriching learning experience. What sets us apart is our commitment to staying ahead of industry trends. We continuously update our course offerings to align with the latest technologies and market demands. By joining Swiss, you're not just taking a course—you're investing in your future. Together, we’ll help you transform your ambitions into achievements, build your confidence, and prepare you for success in an ever-evolving world. Join our community today and start your journey toward mastering the skills that will shape your career and future!</p>
+  </section>
 
 
-<div>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+    <div class="img-box flex flex-col items-center" *ngFor="let i of images">
+      <img [src]="i" class="w-72" alt="development">
+    </div>
+  </div>
 
-<img src="/images.jpeg" >
+
+
+
 
 </div>
+
+
+
