--- a/src/app/carrer/carrer.component.html
+++ b/src/app/carrer/carrer.component.html
@@ -1,1 +1,11 @@
-<p>carrer works!</p>
+<h1 class="main-title">CAREER</h1>
+
+<div class="main-applications">
+  <div class="application" *ngFor="let i of title">
+    <h1 class="logo">Swiss</h1>
+    <h2 class="position">{{i.position}}</h2>
+    <button class="apply-btn">
+     Join us Now
+    </button>
+  </div>
+</div>
