--- a/src/app/navigation/services/services.component.html
+++ b/src/app/navigation/services/services.component.html
@@ -14,7 +14,7 @@
         <li class="text-sm py-2">{{i.sc4}}</li>
         <li class="text-sm py-2">{{i.sc5}}</li>
       </ul>
-      <button class="buy-btn bg-blue-900 text-white rounded-lg py-2 px-6 mt-6 w-full" [ngStyle]="{'background-color': i.btnBackColor, 'color' : i.btnTextColor}">Try Now</button>
+      <button class="buy-btn bg-blue-900 text-white rounded-lg py-2 px-6 mt-6 w-full" [ngStyle]="{'background-color': i.btnBackColor, 'color' : i.btnTextColor}">{{buttonText}}</button>
     </div>
   </div>
 
